finding DOM paths

--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
   <title>Adventure in Coding</title>
 </head>
 <body>
-  <header>
+  <header id="heading">
   <h1>Coding Adventure!</h1>
 </header>
   <main>
-    <div id="name">
-      <img id="name__img"src="Torch_Gif.gif" alt="">
-      <div id="Welcome">
-      <h2>Enter your name:</h2>
-      <input id="name-input" type="text"><br>
-      <button id="Btn-Primary">Enter!</button>
+    <div id="game-section">
+      <img id="name__img"src="imagesfolder\Torch_Gif.gif" alt="">
+      <div id="welcome">
+        <h2 id="main-text"> Enter your name:</h2>
+        <input id="name-input" type="text"><br>
+      </div>
     </div>
-  </div>
+      <div id="btn">
+      <button id="btn-one">Enter!</button>
+      <button id="btn-two">Reset</button>
+      </div>
+ 
 </main>
   <script src="main.js"></script>
 </body>
