Added Objects and image

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Open+Sans:wght@600;700;800&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <title>Adventure in Coding</title>
+  <title>Adventure in Codeshire</title>
 </head>
 <body>
   <header id="heading">
-  <h1>Coding Adventure!</h1>
+  <h1>Adventure in Codeshire!</h1>
 </header>
   <main>
     <div id="game-section">
