--- a/index.html
+++ b/index.html
@@ -16,17 +16,23 @@
 </header>
   <main>
     <div id="game-section">
-      <img id="name__img"src="imagesfolder\Torch_Gif.gif" alt="">
+      <img id="name__img"src="Torch_Gif.gif" alt="">
       <div id="welcome">
         <h2 id="main-text"> Enter your name:</h2>
         <input id="name-input" type="text"><br>
       </div>
     </div>
-      <div id="btn">
-      <button id="btn-one">Enter!</button>
-      <button id="btn-two">Reset</button>
+      <div class="btn">
+      <button id="btn-one" data-click="1">Enter!</button>
+      <button id="btn-two" data-click="2">Reset Name</button>
       </div>
- 
+      <div class="btn">
+        <audio id="myAudio">
+          <source src="Loop_Minstrel_Dance.wav" type="audio/mpeg">
+        </audio>
+        <button class="btn btn-music" onclick="playAudio()" type="button">Play</button>
+        <button class="btn btn-music" onclick="pauseAudio()" type="button">Pause</button>
+      </div>
 </main>
   <script src="main.js"></script>
 </body>
