--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </header>
   <main>
     <div id="game-section">
-      <img id="name__img"src="Torch_Gif.gif" alt="">
+      <img id="name__img"src="imagesfolder\Torch_Gif.gif" alt="">
       <div id="welcome">
         <h2 id="main-text"> Enter your name:</h2>
         <input id="name-input" type="text"><br>
