Created DATA file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img id="name__img"src="imagesfolder\Torch_Gif.gif" alt="">
       <div id="welcome">
         <h2 id="main-text"> Enter your name:</h2>
-        <input id="name-input" type="text"><br>
+        <input id="name-input" defer type="text"><br>
       </div>
     </div>
       <div class="btn">
@@ -34,6 +34,6 @@
         <button class="btn btn-music" onclick="pauseAudio()" type="button">Pause</button>
       </div>
 </main>
-  <script src="main.js"></script>
+  <script src="main.js" type="module"></script>
 </body>
 </html>
