--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <div class="btn">
         <audio id="myAudio">
-          <source src="Loop_Minstrel_Dance.wav" type="audio/mpeg">
+          <source src="./Loop_Minstrel_Dance.wav" type="audio/mpeg">
         </audio>
         <button class="btn btn-music" onclick="playAudio()" type="button">Play</button>
         <button class="btn btn-music" onclick="pauseAudio()" type="button">Pause</button>
