Added more pictures

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Open+Sans:wght@600;700;800&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <title>Adventure in Codeshire</title>
+  <title>Adventure in Codeshire!</title>
 </head>
 <body>
   <header id="heading">
@@ -30,6 +30,8 @@
         <audio id="myAudio">
           <source src="./Loop_Minstrel_Dance.wav" type="audio/mpeg">
         </audio>
+       <!-- <button class="btn btn-music btn-play" onclick="playAudio()" type="button">Play</button>
+        <button class="btn btn-music btn-pause" onclick="pauseAudio()" type="button">Pause</button>-->
       </div>
 </main>
   <script src="main.js" type="module"></script>
