Added screen width changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
       <div class="btn">
       <button id="btn-one" data-click="1">Enter!</button>
-      <button id="btn-two" data-click="2">Reset Name</button>
+      <button id="btn-two" data-click="2">Reset</button>
       </div>
       <div class="btn">
         <audio id="myAudio">
